e2e/manifests/protected-workload/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload
spec:
  selector:
    matchLabels:
      app: workload
  template:
    metadata:
      labels:
        app: workload
    spec:
      containers:
        - name: workload
          image: nginx
          ports:
            - containerPort: 80
              name: http
