e2e/manifests/protected-workload/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workload
spec:
  type: ClusterIP
  selector:
    app: workload
  ports:
    - port: 80
      name: http
